# sensemaker-lite

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: test.yml
client/: CHANGELOG.md  package.json  tsconfig.json
client/docs/: API.md
client/src/: applet.ts  assessment.ts  culturalContext.ts  dimension.ts  index.ts  method.ts  range.ts  resourceDef.ts  sensemakerService.ts  sensemakerStore.ts  signal.ts  utils.ts
client/src/widgets/: dimension-widget-interface.ts
dnas/sensemaker/zomes/coordinator/sensemaker/src/: applet.rs  assessment.rs  cultural_context.rs  dimension.rs  method.rs  range.rs  sensemaker_config.rs  signals.rs  utils.rs
dnas/sensemaker/zomes/integrity/sensemaker/src/: applet.rs  assessment.rs  lib.rs  resource_def.rs
dnas/test_provider/workdir/: dna.yaml
dnas/test_provider/zomes/coordinator/sensemaker_bridge/: Cargo.toml
dnas/test_provider/zomes/coordinator/sensemaker_bridge/src/: lib.rs
tests/: package.json  tsconfig.json
tests/src/: index.ts  store_mocks.ts  utils.ts
tests/src/sensemaker_client/: assessment_loading.ts
tests/src/sensemaker_dna/: agent.ts  applet_config.ts  community_activator.ts  dashboard.ts  neighbourhood.ts  range.ts  sm_config.ts
tests/src/sensemaker_dna/sensemaker/: agent.ts  applet_config.ts  community_activator.ts  dashboard.ts  neighbourhood.ts  range.ts  sm_config.ts
tests/src/sensemaker_dna/widget/: widget_config.ts
