[workspace]
resolver = "2"
members = [
  "dnas/sensemaker/zomes/coordinator/*",
  "dnas/sensemaker/zomes/integrity/*",
  "dnas/test_provider/zomes/coordinator/*",
  "dnas/test_provider/zomes/integrity/*",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace.dependencies]
serde = "=1.0.171"
hdi = "=0.3.1"
hdk = "=0.2.1"
holochain = "=0.2.1"
